// Copyright 2000-2021 JetBrains s.r.o. and other contributors. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.

plugins {
  id 'java'
  id 'org.jetbrains.intellij' version '1.3.0'
}

group 'org.intellij.sdk'
version '2.0.0'

sourceCompatibility = 11

repositories {
  mavenCentral()
}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
  version = '2021.1.3'
  plugins = ['com.intellij.java']
}

buildSearchableOptions {
  enabled = false
}

dependencies {
    compileOnly 'org.projectlombok:lombok:1.18.24'
    annotationProcessor 'org.projectlombok:lombok:1.18.24'
    testCompileOnly 'org.projectlombok:lombok:1.18.24'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
    implementation group: 'commons-collections', name: 'commons-collections', version: '3.2'
    testImplementation group: 'junit', name: 'junit', version: '4.+'
    implementation "io.github.java-diff-utils:java-diff-utils:4.11"
    implementation group: 'com.madgag', name: 'util-diff', version: '1.22'
    implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.0-alpha1'
    implementation 'org.apache.logging.log4j:log4j-slf4j18-impl:2.14.0'
}

patchPluginXml {
  version = project.version
  sinceBuild = '211'
  untilBuild = '213.*'
}

runIde {
  jvmArgs '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED'
}